--- a/API/package.json
+++ b/API/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/jason-nordheim/home-inventory#readme",
   "dependencies": {
     "bcrypt": "^5.0.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.2",
