--- a/web-ui/package.json
+++ b/web-ui/package.json
@@ -31,5 +31,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "enzyme": "^3.11.0",
+    "jest": "^26.1.0"
   }
 }
