--- a/API/package.json
+++ b/API/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/jason-nordheim/home-inventory#readme",
   "dependencies": {
+    "axios": "^0.19.2",
     "bcrypt": "^5.0.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
@@ -25,6 +26,7 @@
     "pg": "^8.3.0"
   },
   "devDependencies": {
+    "jest": "^26.2.2",
     "nodemon": "^2.0.4"
   }
 }
