--- a/web-ui/package.json
+++ b/web-ui/package.json
@@ -9,11 +9,12 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
+    "jest": "24.9.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.4.2",
-    "jest": "24.9.0"
+    "react-router-transition": "^2.0.0",
+    "react-scripts": "^3.4.2"
   },
   "scripts": {
     "start": "react-scripts start",
