commented out test instance of dabase config

--- a/API/config/database.yml
+++ b/API/config/database.yml
@@ -55,9 +55,9 @@ development:
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
-test:
-  <<: *default
-  database: home-inventory
+# test:
+#   <<: *default
+#   database: home-inventory
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -78,8 +78,8 @@ test:
 #   production:
 #     url: <%= ENV['DATABASE_URL'] %>
 #
-production:
-  <<: *default
-  database: home-inventory
-  username: backend_project_name
-  password: <%= ENV['BACKEND_PROJECT_NAME_DATABASE_PASSWORD'] %>
+# production:
+#   <<: *default
+#   database: home-inventory
+#   username: backend_project_name
+#   password: <%= ENV['BACKEND_PROJECT_NAME_DATABASE_PASSWORD'] %>
